Ready for deploy

--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "version": "0.0.0",
   "type": "module",
   "homepage": "https://dima-mcarrow.github.io/react_cv_v2",
+  "homepage": "https://dima-mcarrow.github.io/react_cv_v2",
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -d dist",
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
